# tetrahedron

./: .gitignore  CMakeLists.txt  README.md
src/: tetrahedron.cc
